[package]
name = "xdp-test"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
aya = { git = "https://github.com/dave-tucker/aya", branch="ext" }
anyhow = "1.0.42"
ctrlc = "3.2"
env_logger = "0.9.0"
structopt = { version = "0.3"}
log = "0.4"
object = {version = "0.28", features=["write"]}

[[bin]]
name = "xdp-test"
path = "src/main.rs"

[[bin]]
name = "xdp-test2"
path = "src/main2.rs"
